hopefully fixed the map issue on mobile version of safari

--- a/source/baito-main.css
+++ b/source/baito-main.css
@@ -11,8 +11,15 @@
 }
 
 .search-result-list {
-    width: 25%;
+  width: 25%;
+  background-color: #333333;
 }
+
+.favourites-result-list {
+  background-color: yellow;
+}
+
+
 
 .onyx-highlight {
   background-color: grey;
